# compressO-CLI

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  README_RU.md  build.bat  build.ps1  build.rs  build.sh  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  issue-to-discussion.yml
docs/: SECURITY.md
src/: cli.rs  domain.rs  error.rs  ffmpeg.rs  fs.rs  interactive.rs  localization.rs  main.rs  output.rs  progress.rs
src-tauri/: tauri.conf.json
src/routes/(root)/ui/: DragAndDrop.tsx
